[gd_scene load_steps=2 format=3 uid="uid://vxc3qapjbdb1"]

[ext_resource type="Script" path="res://prog122c.gd" id="1_1a2ue"]

[node name="prog122c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1a2ue")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 192.0

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_top = 192.0
offset_right = 384.0
offset_bottom = 320.0
text = "Show"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 384.0
offset_right = 512.0
offset_bottom = 320.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 512.0
offset_right = 640.0
offset_bottom = 320.0
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
